<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeTitle"
            android:textAlignment="center"
            android:textSize="50sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcomeMainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcomText" />
        </ScrollView>

        <Button
            android:id="@+id/showShoeListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gotoShoeListButtonText" />

    </LinearLayout>
</layout>