<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoeDetailFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/shoeNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:text="@string/shoeNameText"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/shoeNameEdit"
        app:layout_constraintEnd_toStartOf="@+id/shoeNameEdit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/shoeNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16sp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shoeNameLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/companyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:text="@string/companyText"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/companyEdit"
        app:layout_constraintEnd_toStartOf="@+id/companyEdit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/companyEdit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16sp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/companyText"
        app:layout_constraintTop_toBottomOf="@+id/shoeNameEdit" />

    <TextView
        android:id="@+id/shoeSizeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:text="@string/shoeSizeText"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/shoeSizeEdit"
        app:layout_constraintEnd_toStartOf="@+id/shoeSizeEdit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/shoeSizeEdit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16sp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shoeSizeText"
        app:layout_constraintTop_toBottomOf="@+id/companyEdit" />

    <TextView
        android:id="@+id/shoeDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:text="@string/shoeDescriptionText"
        app:layout_constraintBaseline_toBaselineOf="@+id/descriptionEdit"
        app:layout_constraintEnd_toStartOf="@+id/descriptionEdit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/descriptionEdit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16sp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shoeDescriptionText"
        app:layout_constraintTop_toBottomOf="@+id/shoeSizeEdit" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButtonText"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/cancelButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEdit"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>